Move output compression code to a new package